crates/keylayout-core/tests/snapshots/golden__serialized_dead.snap
---
source: crates/keylayout-core/tests/golden.rs
expression: out
---
<?xml version="1.1" encoding="UTF-8"?>
<!DOCTYPE keyboard PUBLIC "-//Apple//DTD Keyboard Layout//EN"
  "file://localhost/System/Library/DTDs/KeyboardLayout.dtd">
<keyboard group="1" id="-15000" name="My Layout" maxout="1">
  <layouts>
    <layout first="0" last="17" modifiers="Mods" mapSet="ANSI"/>
    <layout first="18" last="18" modifiers="Mods" mapSet="ANSI"/>
  </layouts>
  <modifierMap id="Mods" defaultIndex="0">
    <keyMapSelect mapIndex="0"><modifier keys=""/></keyMapSelect>
    <keyMapSelect mapIndex="1"><modifier keys="anyShift caps?"/></keyMapSelect>
    <keyMapSelect mapIndex="2"><modifier keys="caps"/></keyMapSelect>
    <keyMapSelect mapIndex="3"><modifier keys="anyOption"/></keyMapSelect>
    <keyMapSelect mapIndex="4"><modifier keys="anyShift anyOption"/></keyMapSelect>
  </modifierMap>
  <keyMapSet id="ANSI">
    <keyMap index="0">
      <key code="0" output="a"/>
      <key code="1" output="s"/>
      <key code="2" action="dead-acute"/>
    </keyMap>
    <keyMap index="1" baseMapSet="ANSI" baseIndex="0">
      <key code="0" output="A"/>
      <key code="2" output="&#x00B4;"/>
    </keyMap>
  </keyMapSet>
  <actions>
    <action id="dead-acute">
      <when state="none" next="acute"/>
      <when state="acute" output="&#x00E1;"/>
    </action>
  </actions>
  <terminators>
    <when state="acute" output="&#x00B4;"/>
  </terminators>
</keyboard>
