crates/keylayout-core/tests/snapshots/golden__serialized_iso.snap
---
source: crates/keylayout-core/tests/golden.rs
expression: out
---
<?xml version="1.1" encoding="UTF-8"?>
<!DOCTYPE keyboard PUBLIC "-//Apple//DTD Keyboard Layout//EN"
  "file://localhost/System/Library/DTDs/KeyboardLayout.dtd">
<keyboard group="0" id="-4000" name="Sample ISO" maxout="1">
  <layouts>
    <layout first="0" last="17" modifiers="Mods" mapSet="ISO"/>
  </layouts>
  <modifierMap id="Mods" defaultIndex="0">
    <keyMapSelect mapIndex="0"><modifier keys=""/></keyMapSelect>
    <keyMapSelect mapIndex="1"><modifier keys="anyShift caps?"/></keyMapSelect>
    <keyMapSelect mapIndex="2"><modifier keys="anyOption"/></keyMapSelect>
  </modifierMap>
  <keyMapSet id="ISO">
    <keyMap index="0">
      <key code="0" output="a"/>
      <key code="10" output="&#x00A7;"/>
      <key code="50" output="&#x003C;"/>
    </keyMap>
    <keyMap index="1" baseMapSet="ISO" baseIndex="0">
      <key code="0" output="A"/>
      <key code="50" output="&#x003E;"/>
    </keyMap>
    <keyMap index="2" baseMapSet="ISO" baseIndex="0">
      <key code="0" output="&#x00E5;"/>
    </keyMap>
  </keyMapSet>
</keyboard>
